[package]
name = "zusischewe"
version = "3.0.0-alpha.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
clap = { version = "4.5.3", features = ["derive"] }
fs_extra = "1.3.0"
rand = "0.8.5"
rand_distr = "0.4.3"
xmltree = "0.10"
